--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
     <properties>
         <java.version>1.8</java.version>
         <modelmapper.version>2.3.0</modelmapper.version>
+        <cassandra-all.version>3.11.6</cassandra-all.version>
+        <cassandra-migration.version>2.2.0</cassandra-migration.version>
+        <metrics-core.version>3.1.0</metrics-core.version>
     </properties>
 
     <dependencies>
@@ -47,7 +50,13 @@
         <dependency>
             <groupId>org.cognitor.cassandra</groupId>
             <artifactId>cassandra-migration-spring-boot-starter</artifactId>
-            <version>2.2.0</version>
+            <version>${cassandra-migration.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>${metrics-core.version}</version>
         </dependency>
 
         <dependency>
