--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.cassandra.keyspace-name=ep9cas001
 spring.data.cassandra.contact-points=localhost
-spring.data.cassandra.schema-action=CREATE
+spring.data.cassandra.schema-action=RECREATE_DROP_UNUSED
 
 cassandra.migration.keyspace-name=ep9cas001
 cassandra.migration.strategy=IGNORE_DUPLICATES
