--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>br.com.freitas.cassandra.stress</groupId>
+    <groupId>br.com.freitas.dse.stress</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
-    <description>Cassandra Test Stress</description>
+    <description>DataStax Enterprise + DSE Search - Stress Testing </description>
 
     <properties>
         <java.version>1.8</java.version>
